Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/TryWithResources/TwrAndTypeVariables.out
TwrAndTypeVariables.java:20:14: compiler.err.prob.found.req: (compiler.misc.try.not.applicable.to.type: (compiler.misc.inconvertible.types: S, java.lang.AutoCloseable))
1 error
